08-dotnet/government/monolith/Monolith/k8s/00-traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: traefik:v2.9
        args:
          - "--api.dashboard=true"
          - "--entrypoints.web.address=:80"
          - "--providers.kubernetescrd"
          - "--providers.kubernetesingress"
        ports:
          - name: web
            containerPort: 80
          - name: admin
            containerPort: 8080
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
