08-dotnet/government/monolith/Monolith/k8s/03-bootstrapper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bootstrapper-service
spec:
  selector:
    app: bootstrapper
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
