08-dotnet/government/monolith/Monolith/k8s/05-blazorwasm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blazorwasm-service
spec:
  selector:
    app: blazorwasm
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
